quick spacing fix until flash is showing up properly

--- a/Cara_Leigh_files/Cara_Leigh.css
+++ b/Cara_Leigh_files/Cara_Leigh.css
@@ -86,13 +86,13 @@
 .paragraph_style_3 {
     color: rgb(255, 255, 255);
     font-family: 'Helvetica', 'Arial', sans-serif;
-    font-size: 13px;
+    font-size: 12px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 16px;
+    line-height: 14px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -108,13 +108,13 @@
 .paragraph_style_4 {
     color: rgb(255, 255, 255);
     font-family: 'Helvetica-Light', 'Helvetica';
-    font-size: 14px;
+    font-size: 13px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 100;
     letter-spacing:     0.15em;
-    line-height: 17px;
+    line-height: 16px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -216,16 +216,16 @@
 .graphic_textbox_layout_style_default_External_515_42 {
     position: relative;
 }
-.graphic_textbox_layout_style_default_External_323_94 {
+.graphic_textbox_layout_style_default_External_328_38 {
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_334_51 {
     position: relative;
 }
-.graphic_textbox_layout_style_default_External_331_135 {
+.graphic_textbox_layout_style_default_External_322_27 {
     position: relative;
 }
-.graphic_textbox_layout_style_default_External_322_27 {
+.graphic_textbox_layout_style_default_External_330_102 {
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_92_92 {
@@ -237,7 +237,7 @@
 .graphic_textbox_layout_style_default_External_100_100 {
     position: relative;
 }
-.graphic_textbox_layout_style_default_External_328_38 {
+.graphic_textbox_layout_style_default_External_323_72 {
     position: relative;
 }
 .graphic_textbox_style_default_SkipStroke {
